--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,75 @@
 body{
     background-color: white;
 }
+
+.loginForm{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.loginForm button{
+    background-color: #c3392c;
+    color: #fff;
+    min-width: 68px;
+    max-width: 100%;
+    height: 48px;
+    font-size: 18px;
+    font-weight: 700;
+    border-radius: 8px;
+    border: 1px solid transparent;
+    text-align: center;
+}
+
+.loginForm p{
+    font-size: 13px;
+    color: #202020;
+    font-weight: 400;
+    line-height: 18px;
+}
+
+.loginForm p span{
+    text-decoration: underline;
+}
+
+.logInH1{
+    font-size: 32px;
+}
+
+.InputCont{
+    border: 1px solid #e6e6e6;
+    border-radius: 10px;
+    overflow: clip;
+    padding: 8px;
+    padding-bottom: 4px;
+    display: flex;
+    flex-direction: column;
+    font-size: 14px;
+}
+
+.InputCont label{
+    cursor: text;
+    padding-bottom: 8px;
+    font-size: 12px;
+    color: #202020;
+    font-weight: 400;
+}
+
+.InputCont label span{
+    font-weight: 500;
+    font-size: 12px;
+}
+
+.InputCont input{
+    padding: 0;
+    height: 24px;
+    font-size: 16px;
+    /* font-weight: 600; */
+    line-height: 18px;
+    border: none;
+    color: #202020;
+    margin: 0;
+    width: 100%;
+    align-items: center;
+    background: transparent;
+}
