--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,15 @@ body{
     font-size: 32px;
 }
 
+.logInHr{
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 1px solid f5f5f5;
+    gap: 0;
+
+}
+
 .InputCont{
     border: 1px solid #e6e6e6;
     border-radius: 10px;
@@ -95,15 +104,19 @@ body{
         min-width: 68px;
         max-width: 50%;
     }
+
+    .logInH1{
+        padding-top: 32px;
+    }
 }
 
 
-  @media (min-width:992px){
+ @media (min-width:992px){
     & .deskImg{
         display:block;
         width: 450px;
-        margin-bottom: 1000px;
-        margin-left: 30px;
+        height: 230px;
+        margin-left: 50px;
   }
   
   .container{
@@ -114,16 +127,15 @@ body{
 
   .containerBody{
     display: flex;
-    
+    gap: 32px;
     min-width: 68px;
     max-width: 100%;
+    align-items: center;
 }
   .loginForm{
     display: flex;
     flex-direction: column;
-    padding-top: 50px;
-    
-    
+    padding-top: 10px;  
 }
 
 .loginForm p span{
@@ -132,7 +144,7 @@ body{
 
 .logInH1{
     font-size: 32px;
-    margin-top: 50px;
+    /* margin-top: 50px; */
 }
 
 
