--- a/src/components/TodoAppComponents/TodoApp.css
+++ b/src/components/TodoAppComponents/TodoApp.css
@@ -22,5 +22,58 @@
 }
 
 .leftSideCont{
+
     background-color: rgba(0,0,0,.4);
+    width: 100%;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    /* padding-inline: 12px;
+    padding-top: 12px; */
+    z-index: 4;
+}
+
+.leftSideComponentCont{
+    background-color: #faf8f7;
+    color: #202020;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: max-content;
+
+}
+
+.TopBar{
+    width: 280px;
+    padding: 12px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.profileCont{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.profileImg{
+    border-radius: 50%;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    color: white;
+    font-weight: 900;
+    font-size: 20px;
+    text-transform: uppercase;
+}
+
+.profileCont p{
+    color: #202020;
+    font-size: 14px;
+    font-weight: 500;
 }
