--- a/src/components/TodoAppComponents/TodoApp.css
+++ b/src/components/TodoAppComponents/TodoApp.css
@@ -19,34 +19,10 @@
 
 .NavTodoIconCont{
     padding-inline: 11px;
-}
-
-.leftSideCont{
-
-    background-color: rgba(0,0,0,.4);
-    width: 100%;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    top: 0;
-    /* padding-inline: 12px;
-    padding-top: 12px; */
-    z-index: 4;
-}
-
-.leftSideComponentCont{
-    background-color: #faf8f7;
-    color: #202020;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    width: max-content;
-
+    
 }
 
 .TopBar{
-    width: 280px;
     padding: 12px;
     display: flex;
     justify-content: space-between;
@@ -76,4 +52,13 @@
     color: #202020;
     font-size: 14px;
     font-weight: 500;
+}
+
+@media screen and (min-width: 768px) {
+.NavTodoIconCont{
+    
+
+    
+}
+
 }
